JBCOMMON-60, make the test pass
git-svn-id: https://svn.jboss.org/repos/common/common-core/trunk@2905 15291643-af16-0410-b526-a589213603f9